--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
       - 3000:3000
     volumes:
       - .:/usr/src/app
-    command: air cmd/main.go -b 0.0.0.0
+    command: /bin/main
+    # command: air cmd/main.go -b 0.0.0.0
   db:
     image: postgres:alpine
     environment:
@@ -20,6 +21,11 @@ services:
       - 5432:5432
     volumes:
      - postgres-db:/var/lib/postgresql/data
+  # test:
+  #   build: .
+  #   volumes:
+  #     - .:/usr/src/app
+  #   command: go test -v
 
 volumes:
   postgres-db:
