--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,10 @@ version: '3.8'
 services:
   web:
     build: .
+    depends_on:
+      db:
+        condition: service_healthy
+        restart: true
     env_file:
       - .env
     ports:
@@ -19,6 +23,11 @@ services:
       - POSTGRES_DB=${DB_NAME}
     ports:
       - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -h db -U juan1234 || exit 1"]
+      interval: 5s
+      timeout: 10s
+      retries: 3
     volumes:
      - postgres-db:/var/lib/postgresql/data
   dbtest:
@@ -29,11 +38,6 @@ services:
       - POSTGRES_DB=${DB_NAME_TEST}
     ports:
       - 5433:5432
-  # test:
-  #   build: .
-  #   volumes:
-  #     - .:/usr/src/app
-  #   command: go test -v
 
 volumes:
   postgres-db:
