Configuración variables de entorno ( issue #8)

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_USER=juan1234
-DB_PASSWORD=juan1234
-DB_NAME=facts
-DB_NAME_TEST=test
+# DB_USER=juan1234
+# DB_PASSWORD=juan1234
+# DB_NAME=facts
+# DB_NAME_TEST=test
