--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,8 +9,8 @@ services:
       db:
         condition: service_healthy
         restart: true
-    env_file:
-      - .env
+    # env_file:
+    #   - .env
     ports:
       - 3000:3000
     # volumes:
