--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -11,6 +11,11 @@ services:
         restart: true
     # env_file:
     #   - .env
+    environment:
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME_TEST=${DB_NAME_TEST}
+      - DB_NAME=${DB_NAME}
     ports:
       - 3000:3000
     # volumes:
