--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,13 @@ services:
       db:
         condition: service_healthy
         restart: true
-    env_file:
-      - .env
+    # env_file:
+    #   - .env
+    environment:
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME_TEST=${DB_NAME_TEST}
+      - DB_NAME=${DB_NAME}
     ports:
       - 3000:3000
     # volumes:
