--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,11 @@
 sonar.projectKey=rest-api
 
 # --- optional properties ---
-
+sonar.exclusions=**/*_test.go
+sonar.tests=.
+sonar.go.coverage.reportPaths=coverage.out
+sonar.go.tests.reportPaths=report.json
+sonar.test.inclusions=**/*_test.go
 # defaults to project key
 #sonar.projectName=My project
 # defaults to 'not provided'
