--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.exclusions=**/*_test.go
 sonar.tests=.
 sonar.go.coverage.reportPaths=coverage.out
 sonar.go.tests.reportPaths=report.json
-sonar.test.inclusions=**/*_test.go
+#sonar.test.inclusions=**/*_test.go
 # defaults to project key
 #sonar.projectName=My project
 # defaults to 'not provided'
