--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,12 @@
 sonar.projectKey=rest-api
 
 # --- optional properties ---
-sonar.exclusions=**/*_test.go
+sonar.exclusions="**/*_test.go"
+sonar.sources=.
 sonar.tests=.
 sonar.go.coverage.reportPaths=coverage.out
 sonar.go.tests.reportPaths=report.json
-#sonar.test.inclusions=**/*_test.go
+sonar.test.inclusions="**/*_test.go"
 # defaults to project key
 #sonar.projectName=My project
 # defaults to 'not provided'
